--- a/exercises/weather/styles/style.css
+++ b/exercises/weather/styles/style.css
@@ -1,6 +1,11 @@
 body {
+  height: 100%;
   display: flex;
   flex-direction: column;
+}
+
+* {
+  box-sizing: border-box;
 }
 
 header,
@@ -29,14 +34,86 @@ select {
   width: 128px;
   background-size: cover;
   background-repeat: no-repeat;
+  margin: auto;
 }
 
-.forecast-weather {
+.card-background {
+  filter: blur(12px);
+  -webkit-filter: blur(12px);
+  z-index: -1;
+  width: 100%;
+  height: 300px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+#currentWeather,
+#forecastWeather1,
+#forecastWeather2,
+#forecastWeather3,
+#forecastWeather4:hover {
+  backdrop-filter: none;
+}
+
+.day-weather {
+  background-color: rgb(0, 0, 0); /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.4); /* Black w/opacity/see-through */
+  color: white;
+  font-weight: bold;
+  border: 3px solid #f1f1f1;
+  position: absolute;
+  top: 50%;
+  left: 25%;
+  transform: translate(-50%, -50%);
+  z-index: 2;
+  width: 50%;
+  padding: 20px;
+  text-align: center;
+  flex-grow: 1;
+}
+.night-weather {
+  background-color: rgb(0, 0, 0); /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.4); /* Black w/opacity/see-through */
+  color: white;
+  font-weight: bold;
+  border: 3px solid #f1f1f1;
+  position: absolute;
+  top: 50%;
+  left: 75%;
+  transform: translate(-50%, -50%);
+  z-index: 2;
+  width: 50%;
+  padding: 20px;
+  text-align: center;
+  flex-grow: 1;
+}
+#currentWeather > .night-weather {
+  background-color: rgb(0, 0, 0); /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.4); /* Black w/opacity/see-through */
+  color: white;
+  font-weight: bold;
+  border: 3px solid #f1f1f1;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 2;
+  width: 100%;
+  padding: 20px;
+  text-align: center;
+}
+
+#currentWeather,
+#forecastWeather1,
+#forecastWeather2,
+#forecastWeather3,
+#forecastWeather4 {
+  position: relative;
   display: flex;
   flex-direction: row;
-}
-
-.night-weather,
-.day-weather {
-  flex-grow: 1;
+  text-align: center;
+  backdrop-filter: blur(6px);
+  -webkit-backdrop-filter: blur(6px);
+  transition: 100ms backdrop-filter linear;
 }
