--- a/exercises/weather/styles/style.css
+++ b/exercises/weather/styles/style.css
@@ -25,7 +25,7 @@ select {
 
 .location {
   text-align: center;
-  font-size: 2rem;
+  font-size: 2.5rem;
   font-weight: bold;
 }
 
@@ -37,9 +37,15 @@ select {
   margin: auto;
 }
 
+.time-of-day {
+  margin-bottom: 2rem;
+}
+
+.sky-condition {
+  margin-top: 2rem;
+}
+
 .card-background {
-  filter: blur(12px);
-  -webkit-filter: blur(12px);
   z-index: -1;
   width: 100%;
   height: 300px;
@@ -61,14 +67,13 @@ select {
   background-color: rgba(0, 0, 0, 0.4); /* Black w/opacity/see-through */
   color: white;
   font-weight: bold;
-  border: 3px solid #f1f1f1;
+  border: 2px solid #f1f1f1;
   position: absolute;
   top: 50%;
   left: 25%;
   transform: translate(-50%, -50%);
   z-index: 2;
   width: 50%;
-  padding: 20px;
   text-align: center;
   flex-grow: 1;
 }
@@ -84,7 +89,6 @@ select {
   transform: translate(-50%, -50%);
   z-index: 2;
   width: 50%;
-  padding: 20px;
   text-align: center;
   flex-grow: 1;
 }
@@ -100,7 +104,6 @@ select {
   transform: translate(-50%, -50%);
   z-index: 2;
   width: 100%;
-  padding: 20px;
   text-align: center;
 }
 
